# audototextandvv

./: .gitignore  README.md  documentation.md  settings.gradle.kts
app/: build.gradle.kts  proguard-rules.pro
app/src/androidTest/java/com/example/localaudiototext/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  phonemize_jni.cpp  whisper_jni.cpp
app/src/main/java/com/example/localaudiototext/: AudioRecorder.kt  EspeakPhonemizer.kt  KittenTTSEngine.kt  MainActivity.kt  NpzReader.kt  SpeechToTextManager.kt  TextCleaner.kt  TextPreprocessor.kt  TextToSpeechManager.kt  WhisperLib.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/localaudiototext/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
